--- a/LearnML2023.ipynb
+++ b/LearnML2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNxtJhJ0i5yLuBzJbsQivD",
+      "authorship_tag": "ABX9TyMt3FDENqbMMgbYfOMlBiyy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "K12mD7IuBgy_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K12mD7IuBgy_",
+        "outputId": "90cb0623-9b33-471e-d59b-eee8910b0bcb"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array({1, 2, 3}, dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "my_list={1,2,3}\n",
+        "my_list\n",
+        "arr=np.array(my_list)\n",
+        "arr"
+      ]
     }
   ]
 }
