--- a/LearnML2023.ipynb
+++ b/LearnML2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMt3FDENqbMMgbYfOMlBiyy",
+      "authorship_tag": "ABX9TyOZInQJkvx0qIEfNyxCa8jj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K12mD7IuBgy_",
-        "outputId": "90cb0623-9b33-471e-d59b-eee8910b0bcb"
+        "outputId": "dcbc6c74-2972-4300-b9ac-3ee92e95639c"
       },
       "outputs": [
         {
@@ -45,15 +45,248 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ],
       "source": [
         "import numpy as np\n",
         "my_list={1,2,3}\n",
         "my_list\n",
-        "arr=np.array(my_list)\n",
-        "arr"
+        "np.array(my_list)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.arange(0,10,2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uxowKjhpKzQH",
+        "outputId": "ce7e622e-f57b-4b9a-a8e9-464dc8c1931c"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 2, 4, 6, 8])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.zeros((4,4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wLUjI89mMTP2",
+        "outputId": "6ef08716-5ef2-44ff-8dfd-2490458b93c0"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.ones((3,4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r27d53Y9UHBO",
+        "outputId": "6e925dea-6d76-4a9e-a472-1adbe24747cf"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.linspace(0,1,10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zeV0VUWqUQzS",
+        "outputId": "a15f8c41-05fd-4ba3-a10a-0cef8433b49f"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.        , 0.11111111, 0.22222222, 0.33333333, 0.44444444,\n",
+              "       0.55555556, 0.66666667, 0.77777778, 0.88888889, 1.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.eye(9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qZ7sJnZzZmpW",
+        "outputId": "0b8a3eed-6006-4139-c78a-3ac807f4fc4c"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.random.rand(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8N8Yn4VNZ3pQ",
+        "outputId": "38c6c74f-52cd-4740-9a6f-387dc31b79ba"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.65834984, 0.59599523, 0.11493263],\n",
+              "       [0.53388745, 0.61910341, 0.08962908]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.random.randn(7)\n",
+        "#std normal distribution"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CdEY0pE6huDn",
+        "outputId": "1bd9af0e-774d-4861-99e2-ffa7217b7dc2"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.6250729 ,  0.03580549, -2.1751783 , -0.9606873 , -0.06448493,\n",
+              "        0.29406606, -0.04294395])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.random.randint(1,99,9)\n",
+        "#3rd argument for number of random numbers needed"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_lAPrPRfiG1r",
+        "outputId": "ca616b12-420c-4f4a-c29c-d9678c39ec84"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 7, 79, 59,  4, 38, 13, 62, 59,  7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
       ]
     }
   ]
