--- a/LearnML2023.ipynb
+++ b/LearnML2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZInQJkvx0qIEfNyxCa8jj",
+      "authorship_tag": "ABX9TyOTQSQMM2oT0W6HwqyI99qD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68,7 +68,7 @@
         "id": "uxowKjhpKzQH",
         "outputId": "ce7e622e-f57b-4b9a-a8e9-464dc8c1931c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -95,7 +95,7 @@
         "id": "wLUjI89mMTP2",
         "outputId": "6ef08716-5ef2-44ff-8dfd-2490458b93c0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
         "id": "r27d53Y9UHBO",
         "outputId": "6e925dea-6d76-4a9e-a472-1adbe24747cf"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
         "id": "zeV0VUWqUQzS",
         "outputId": "a15f8c41-05fd-4ba3-a10a-0cef8433b49f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -182,7 +182,7 @@
         "id": "qZ7sJnZzZmpW",
         "outputId": "0b8a3eed-6006-4139-c78a-3ac807f4fc4c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
         "id": "8N8Yn4VNZ3pQ",
         "outputId": "38c6c74f-52cd-4740-9a6f-387dc31b79ba"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,7 +246,7 @@
         "id": "CdEY0pE6huDn",
         "outputId": "1bd9af0e-774d-4861-99e2-ffa7217b7dc2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +275,7 @@
         "id": "_lAPrPRfiG1r",
         "outputId": "ca616b12-420c-4f4a-c29c-d9678c39ec84"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,6 +288,130 @@
           "execution_count": 25
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "July 24th 2023 session starts below:"
+      ],
+      "metadata": {
+        "id": "gxnM97JmJbt_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "array=np.arange(15)\n",
+        "array\n",
+        "array.reshape(3,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jaVrSChAJmLd",
+        "outputId": "6189d3bc-2e0b-44a5-c714-c1aa0ed6f6ff"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8,  9],\n",
+              "       [10, 11, 12, 13, 14]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "array=np.random.randint(0,50,10)\n",
+        "print(array)\n",
+        "print(array.max())\n",
+        "array.min()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wkx5LPmuKok9",
+        "outputId": "25c3957e-4507-4d77-bbd6-a1a4be26d5ad"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[25 17 43 39 44 30 40  8  2  5]\n",
+            "44\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FscOWiGcLn-c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "array=np.random.randint(0,50,10)\n",
+        "print(array)\n",
+        "array[3:7]=999 #replace particular values in array\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24784c74-d058-4f74-b332-e005b2bc0d67",
+        "id": "X0d6aEqdLvMj"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[19 41 24 33 34 37  5 23 49 36]\n",
+            "[ 19  41  24 999 999 999 999  23  49  36]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8GkjjnMhLoAR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
