--- a/LearnML2023.ipynb
+++ b/LearnML2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTQSQMM2oT0W6HwqyI99qD",
+      "authorship_tag": "ABX9TyORI8Tl6tEpwqUmmUAZEAi4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -406,12 +406,88 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "array=np.random.randint(0,50,25).reshape(5,5)\n",
+        "print(array)\n",
+        "array > 21"
+      ],
       "metadata": {
-        "id": "8GkjjnMhLoAR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8GkjjnMhLoAR",
+        "outputId": "b67d1c53-ad33-4dd4-c09d-28780572042d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[49 36 26  9  0]\n",
+            " [38 44 46 23 30]\n",
+            " [26 10 49 33 19]\n",
+            " [44 36  5 44 23]\n",
+            " [11 44 42 32  8]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ True,  True,  True, False, False],\n",
+              "       [ True,  True,  True,  True,  True],\n",
+              "       [ True, False,  True,  True, False],\n",
+              "       [ True,  True, False,  True,  True],\n",
+              "       [False,  True,  True,  True, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "array=np.arange(10)\n",
+        "print(array)\n",
+        "print(array+array)\n",
+        "print(array*2)\n",
+        "np.sin(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AOBXcX5vOyVc",
+        "outputId": "ca7ab4a1-041e-4384-df3c-084bdcc36662"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "[ 0  2  4  6  8 10 12 14 16 18]\n",
+            "[ 0  2  4  6  8 10 12 14 16 18]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.        ,  0.84147098,  0.90929743,  0.14112001, -0.7568025 ,\n",
+              "       -0.95892427, -0.2794155 ,  0.6569866 ,  0.98935825,  0.41211849])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     }
   ]
 }
