--- a/LearnML2023.ipynb
+++ b/LearnML2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyfyMU2g7lLFyq8xEjt/G6",
+      "authorship_tag": "ABX9TyM7YElc3OXjeqrKQHxUybtZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2830,7 +2830,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OVsjsrB8sLev",
-        "outputId": "817c4dac-9951-4420-cb41-7b39d1cd1ff4"
+        "outputId": "4327c3f5-8b94-414d-ad18-a4e07cb12ddd"
       },
       "execution_count": 3,
       "outputs": [
@@ -3177,7 +3177,7 @@
           "height": 74
         },
         "id": "VCrKkIdpuMVL",
-        "outputId": "6ee8fbe6-3280-4cf7-f2f3-fb547dbb8ed6"
+        "outputId": "219342be-c854-4720-d889-56be2011076b"
       },
       "execution_count": 4,
       "outputs": [
@@ -3206,9 +3206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HtYmJE1wuTJE",
-        "outputId": "5c7c5ab8-0dff-4d42-d300-8229575540d8"
+        "outputId": "50203aa8-5d88-466c-aa96-1de32d4366b2"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -3231,9 +3231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-tq7W2Fgv1o0",
-        "outputId": "fcc8d23d-8fcc-4706-cd3f-4cdd2e808ef3"
+        "outputId": "b069fd5e-b106-4b8a-9b3d-fc147a07f9b6"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -3329,16 +3329,16 @@
         "from sklearn.metrics import confusion_matrix, accuracy_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
         "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "accuracy_score(y_test, y_pred)#83% accuracy obtained"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ht14NHHev4PO",
-        "outputId": "9092c354-fc00-4847-94d4-777257c6bf40"
+        "outputId": "f28be7db-e387-4287-e4db-bbc086a7baf7"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -3356,7 +3356,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     }
